// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sources-tree addToTree can add a file to an intermediate directory 1`] = `
" - root path= 
  - unpkg.com path=/unpkg.com 
    - codemirror@5.1 path=/unpkg.com/codemirror@5.1 
      - mode path=/unpkg.com/codemirror@5.1/mode 
        - xml path=/unpkg.com/codemirror@5.1/mode/xml 
          - xml.js path=/unpkg.com/codemirror@5.1/mode/xml/xml.js source_id=server1.conn13.child1/39 
    - codemirror@5.1 path=/unpkg.com/codemirror@5.1 source_id=server1.conn13.child1/37 
"
`;

exports[`sources-tree addToTree correctly parses file sources 1`] = `
" - root path= 
  - file:// path=/file:// 
    - a path=/file:///a 
      - b.js path=/file:///a/b.js source_id=undefined 
"
`;

exports[`sources-tree addToTree does not attempt to add two of the same directory 1`] = `
" - root path= 
  - davidwalsh.name path=/davidwalsh.name 
    - (index) path=https://davidwalsh.name/ source_id=server1.conn13.child1/37 
    - wp-content path=/davidwalsh.name/wp-content 
      - prism.js path=/davidwalsh.name/wp-content/prism.js source_id=server1.conn13.child1/39 
"
`;

exports[`sources-tree addToTree does not attempt to add two of the same file 1`] = `
" - root path= 
  - davidwalsh.name path=/davidwalsh.name 
    - (index) path=https://davidwalsh.name/ source_id=server1.conn13.child1/37 
"
`;

exports[`sources-tree addToTree excludes javascript: URLs from the tree 1`] = `
" - root path= 
  - example.com path=/example.com 
    - source1.js path=/example.com/source1.js source_id=undefined 
"
`;

exports[`sources-tree addToTree replaces a file with a directory 1`] = `
" - root path= 
  - unpkg.com path=/unpkg.com 
    - codemirror@5.1 path=/unpkg.com/codemirror@5.1 source_id=server1.conn13.child1/37 
    - codemirror@5.1 path=/unpkg.com/codemirror@5.1 
      - mode path=/unpkg.com/codemirror@5.1/mode 
        - xml path=/unpkg.com/codemirror@5.1/mode/xml 
          - xml.js path=/unpkg.com/codemirror@5.1/mode/xml/xml.js source_id=server1.conn13.child1/39 
"
`;
